--- a/troubleshooting/Broken-Exam-lab-GW-Asso05.yaml
+++ b/troubleshooting/Broken-Exam-lab-GW-Asso05.yaml
@@ -24,13 +24,13 @@ consumers:
   - key: acl22
   username: acl22
 - basicauth_credentials:
-  - password: 4c3ec49ed13d8b93e10de9f4861fdaad2b97a49d
+  - password: anotherUsernamePASWORD
     username: anotherUsername
   keyauth_credentials:
   - key: anotherKey
   username: anotherConsumer
 - basicauth_credentials:
-  - password: e7b7e89c9ef04011e7548bf863b017fb3cefc979
+  - password: anotherUsernamePASWORD
     username: basic
   username: basic
 - acls:
@@ -48,7 +48,7 @@ consumers:
   - key: gold
   username: gold-partner
 - basicauth_credentials:
-  - password: bf511a216f889987a523c3743687a39179fa281f
+  - password: anotherUsernamePASWORD
     username: httpbin
   keyauth_credentials:
   - key: httpbinKey
@@ -244,9 +244,9 @@ routes:
   - /awsLambda
   plugins:
   - config:
-      aws_key: AKIASGVFEB7FCON4EBFQ
+      aws_key: fakeabcdefhijklmnopq
       aws_region: us-west-1
-      aws_secret: ISTb0e6YRr5x99C0MtkRtSGB8UKx3bR4JfvdZu9R
+      aws_secret: fakeabcdefhijklmnopqrstuvwxyz
       awsgateway_compatible: true
       forward_request_body: false
       forward_request_headers: false
