--- a/installation/hybrid.yaml
+++ b/installation/hybrid.yaml
@@ -4,6 +4,8 @@
 version: "3"
 networks:
   kong-edu-net:
+    name: kong-edu-net
+    driver: bridge
 services:
   postgres:
     image: postgres:9.6
