--- a/installation/kongsecadmin.yaml
+++ b/installation/kongsecadmin.yaml
@@ -5,7 +5,7 @@ networks:
   driver: bridge
 services:
  postgres:
-  image: postgres:9.6
+  image: postgres:13.1
   restart: always
   container_name: postgres
   hostname: postgres
@@ -18,7 +18,7 @@ services:
   networks:
    - kong-edu-net
  kong-bootstrap:
-  image: kong/kong-gateway:2.7-alpine
+  image: kong/kong-gateway:2.8-alpine
   container_name: kong-bootstrap
   depends_on:
     - postgres
@@ -33,7 +33,7 @@ services:
   networks:
    - kong-edu-net
  kong-load-config:
-  image: kong/kong-gateway:2.7-alpine
+  image: kong/kong-gateway:2.8-alpine
   container_name: kong-load-config
   depends_on:
     - kong-bootstrap
@@ -50,7 +50,7 @@ services:
   networks:
    - kong-edu-net  
  kong-ee:
-  image: kong/kong-gateway:2.7-alpine
+  image: kong/kong-gateway:2.8-alpine
   container_name: kong-ee
   hostname: kong-ee
   depends_on:
@@ -89,8 +89,8 @@ services:
    - KONG_VITALS=off
    - KONG_STATUS_LISTEN=0.0.0.0:8100
    - KONG_PASSWORD=admin
-   - KONG_ENFORCE_RBAC=on
-   - KONG_ADMIN_GUI_AUTH=basic-auth
-   - KONG_ADMIN_GUI_SESSION_CONF={"secret":"kong", "cookie_name":"kong_cookie", "cookie_secure":false}
+  #- KONG_ENFORCE_RBAC=on
+  #- KONG_ADMIN_GUI_AUTH=basic-auth
+  #- KONG_ADMIN_GUI_SESSION_CONF={"secret":"kong", "cookie_name":"kong_cookie", "cookie_secure":false}
   networks:
    - kong-edu-net
