--- a/installation/docker-compose.yaml
+++ b/installation/docker-compose.yaml
@@ -180,8 +180,8 @@ services:
       KONG_STATUS_LISTEN: "0.0.0.0:8101"
       KONG_PROXY_ACCESS_LOG: /srv/shared/logs/proxy_access.log
       KONG_PROXY_ERROR_LOG: /srv/shared/logs/proxy_error.log
-#!    KONG_PROXY_STREAM_ACCESS_LOG: /srv/shared/logs/proxystream_access.log
-#!    KONG_PROXY_STREAM_ERROR_LOG: /srv/shared/logs/proxystream_error.log
+      KONG_PROXY_STREAM_ACCESS_LOG: /srv/shared/logs/proxystream_access.log
+      KONG_PROXY_STREAM_ERROR_LOG: /srv/shared/logs/proxystream_error.log
       KONG_DATABASE: "off"
       #KONG_LICENSE_DATA: ${KONG_LICENSE_DATA}
       KONG_ANONYMOUS_REPORTS: "off"
@@ -189,12 +189,12 @@ services:
       KONG_SSL_CERT_KEY: "/srv/shared/ssl/wildcard.key"
       KONG_SSL_CERT: "/srv/shared/ssl/wildcard.pem"
       KONG_NGINX_WORKER_PROCESSES: 1
-#!    KONG_TRACING: "on"
-#!    KONG_TRACING_WRITING_STRATEGY: file
-#!    KONG_TRACING_TYPES: all
-#!    KONG_TRACING_TIME_THRESHOLD: 0
-#!    KONG_TRACING_WRITE_END_POINT: /srv/shared/logs/granular_tracing.log
-#!    KONG_TRACING_DEBUG_HEADER: X-Trace
+      KONG_TRACING: "on"
+      KONG_TRACING_WRITING_STRATEGY: file
+      KONG_TRACING_TYPES: all
+      KONG_TRACING_TIME_THRESHOLD: 0
+      KONG_TRACING_WRITE_END_POINT: /srv/shared/logs/granular_tracing.log
+      KONG_TRACING_DEBUG_HEADER: X-Trace
     healthcheck:
       test: ["CMD", "kong", "health"]
       interval: 10s
