--- a/installation/docker-compose.yaml
+++ b/installation/docker-compose.yaml
@@ -190,10 +190,10 @@ services:
       KONG_SSL_CERT: "/srv/shared/ssl/wildcard.pem"
       KONG_NGINX_WORKER_PROCESSES: 1
       KONG_TRACING: "on"
-      KONG_TRACING_WRITING_STRATEGY: file
-      KONG_TRACING_TYPES: all
+      KONG_TRACING_WRITING_STRATEGY: "file"
+      KONG_TRACING_TYPES: "all"
       KONG_TRACING_TIME_THRESHOLD: 0
-      KONG_TRACING_WRITE_END_POINT: /srv/shared/logs/granular_tracing.log
+      KONG_TRACING_WRITE_ENDPOINT: "/srv/shared/logs/granular_tracing.log basic"
       KONG_TRACING_DEBUG_HEADER: X-Trace
     healthcheck:
       test: ["CMD", "kong", "health"]
