--- a/installation/docker-compose.yaml
+++ b/installation/docker-compose.yaml
@@ -180,7 +180,7 @@ services:
       KONG_STATUS_LISTEN: "0.0.0.0:8101"
       KONG_PROXY_ACCESS_LOG: /srv/shared/logs/proxy_access.log
       KONG_PROXY_ERROR_LOG: /srv/shared/logs/proxy_error.log
-      KONG_PROXY_STREAM_ACCESS_LOG: "/srv/shared/logs/proxystream_access.log basic"
+      KONG_PROXY_STREAM_ACCESS_LOG: /srv/shared/logs/proxystream_access.log basic
       KONG_PROXY_STREAM_ERROR_LOG: /srv/shared/logs/proxystream_error.log
       KONG_DATABASE: "off"
       #KONG_LICENSE_DATA: ${KONG_LICENSE_DATA}
