--- a/installation/docker-compose.yaml
+++ b/installation/docker-compose.yaml
@@ -24,6 +24,11 @@ services:
 #^    KEYCLOAK_PASSWORD: admin
 #^    KEYCLOAK_IMPORT: "/data/kong_realm_template.json"
 #^    PROXY_ADDRESS_FORWARDING: "true"
+#^    healthcheck:
+#^      test: ["CMD", "curl", "-f", "$KEYCLOAK_URI/auth/realms/master"]
+#^      interval: 5s
+#^      timeout: 2s
+#^      retries: 24
 #^  ports:
 #^    - 8080:8080
 
@@ -212,6 +217,9 @@ services:
     image: reachfive/fake-smtp-server
     container_name: smtp-server
     hostname: smtp-server
+    depends_on:
+      kong-cp:
+        condition: service_healthy
     ports:
     # - "25:1025/tcp"
       - "1080:1080/tcp"
