--- a/installation/docker-compose.yaml
+++ b/installation/docker-compose.yaml
@@ -221,7 +221,7 @@ services:
       kong-cp:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "$KONG_ADMIN_API_URI/status", "-H", "Kong-Admin-Token:my_token"]
+      test: ["CMD-SHELL", "exit 0"]
       interval: 15s
       timeout: 5s
       retries: 25        
