--- a/installation/docker-compose.yaml
+++ b/installation/docker-compose.yaml
@@ -127,7 +127,7 @@ services:
       KONG_ADMIN_GUI_SSL_CERT_KEY: "/srv/shared/ssl/wildcard.key"
       KONG_ADMIN_GUI_SSL_CERT: "/srv/shared/ssl/wildcard.pem"
       #KONG_ADMIN_GUI_AUTH: "basic-auth"
-      #KONG_ADMIN_GUI_SESSION_CONF: "{ \"cookie_name\": \"manager-session\", \"secret\": \"this_is_my_other_secret\", \"storage\": \"kong\", \"cookie_secure\":true, \"cookie_lifetime\":36000}"
+      #KONG_ADMIN_GUI_SESSION_CONF: {"cookie_name":"manager-session","secret":"this_is_my_other_secret","storage":"kong","cookie_secure":true,"cookie_lifetime":36000}
       KONG_PORTAL: "on"
       KONG_PORTAL_GUI_PROTOCOL: "https"
       #KONG_PORTAL_GUI_HOST: "portal.kong.lan:8446"
@@ -139,7 +139,7 @@ services:
       KONG_PORTAL_API_SSL_CERT_KEY: "/srv/shared/ssl/wildcard.key"
       KONG_PORTAL_API_SSL_CERT: "/srv/shared/ssl/wildcard.pem"
       KONG_PORTAL_AUTH: "basic-auth"
-      KONG_PORTAL_SESSION_CONF: "{\"cookie_name\":\"portal-session\",\"secret\":\"this_is_my_secret\",\"storage\":\"kong\",\"cookie_secure\":true, \"cookie_domain\":\".labs.konghq.com\", \"cookie_samesite\":\"off\"}"
+      KONG_PORTAL_SESSION_CONF: {"cookie_name":"portal-session","secret":"this_is_my_secret","storage":"kong","cookie_secure":true,"cookie_domain":".labs.konghq.com", "cookie_samesite":"off"}
       KONG_PORTAL_EMAIL_VERIFICATION: "off"
       KONG_PORTAL_EMAILS_FROM: "me@example.com"
       KONG_PORTAL_EMAILS_REPLY_TO: "me@example.com"
