--- a/installation/docker-compose.yaml
+++ b/installation/docker-compose.yaml
@@ -245,3 +245,17 @@ services:
       retries: 25        
     ports:
     - "8888:8080/tcp"
+
+  redis:
+    networks:
+    - kong-edu-net
+    image: "redis:alpine"
+    container_name: redis
+    hostname: redis
+    healthcheck:
+      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+      interval: 15s
+      timeout: 15s
+      retries: 25        
+    ports:
+    - "6379:6379/tcp"
